# remote-access-trojan

./: Cargo.toml
rat-client/: Cargo.toml
rat-client/src/: main.rs
rat-common/: Cargo.toml
rat-common/src/: lib.rs  messages.rs  module.rs  utils.rs
rat-server/: Cargo.toml
rat-server/src/: cli.rs  lib.rs  logger.rs  main.rs  message.rs  messages.rs
rat-server/src/modules/: console.rs  mod.rs  receiver.rs  sender.rs  server.rs
rat-server/src/modules/admin/: mod.rs  service.rs
rat-server/src/modules/connection/: connector.rs  mod.rs  receiver.rs  sender.rs
