[workspace]
resolver = "2"
members = ["rat-client", "rat-common", "rat-server"]

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
clap = { version = "4.5.53", default-features = false, features = ["std"] }
log = { version = "0.4.29", default-features = false }
postcard = { version = "1.1.3", default-features = false }
rand = { version = "0.9.2", default-features = false }
serde = { version = "1.0.228", default-features = false }
simplelog = { version = "0.12.2", default-features = false }
tokio = { version = "1.48.0", default-features = false }

[workspace.lints.clippy]
absolute_paths = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
branches_sharing_code = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
collection_is_never_read = "warn"
elidable_lifetime_names = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
manual_instant_elapsed = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
needless_collect = "warn"
needless_continue = "warn"
string_to_string = "warn"
suboptimal_flops = "warn"
too_many_arguments = "allow"
trait_duplication_in_bounds = "warn"
use_self = "warn"
wildcard_imports = "warn"

[profile.release]
codegen-units = 1
debug = 0
lto = "thin"
opt-level = 3
overflow-checks = false
strip = true
