[package]
name = "rat-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }
rat-common = { path = "../rat-common" }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
