[package]
name = "rat-client"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }
rat-common = { path = "../rat-common" }
tokio = { workspace = true, features = ["io-util", "macros", "net", "process", "rt-multi-thread"] }

[lints]
workspace = true
