[package]
name = "rat-server"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }
rand = { workspace = true, features = ["thread_rng"] }
rat-common = { path = "../rat-common" }
simplelog = { workspace = true, features = ["local-offset", "termcolor"] }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "time"] }

[lints]
workspace = true
