[package]
name = "rat-server"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "error-context", "help", "usage"] }
http-body-util = { workspace = true }
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
log = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }
rand = { workspace = true, features = ["thread_rng"] }
rat-common = { path = "../rat-common" }
serde_json = { workspace = true, features = ["std"] }
simplelog = { workspace = true, features = ["local-offset", "termcolor"] }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }

[lints]
workspace = true
